--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -1,11 +1,10 @@
 name: Java CI/CD Pipeline
 
-# Trigger on push to main branch and pull requests
 on:
   push:
     branches:
       - main
-  
+
 env:
   IMAGE_NAME: abishekn01/sample-app
   DOCKER_REGISTRY: docker.io
@@ -18,7 +17,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        java-version: [17, 20]  # Matrix build for multiple Java versions
+        java-version: [17, 20] # Matrix build for multiple Java versions
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
@@ -39,29 +38,57 @@ jobs:
 
       - name: Build with Maven
         run: mvn clean install -B
-        continue-on-error: false # Stop if build fails
 
   # -----------------------------
   # 2. SonarQube Static Analysis
   # -----------------------------
-  sonar:
+  build_project_and_sonar_scan:
     runs-on: ubuntu-latest
     needs: build
     steps:
-    - uses: actions/checkout@v4
-    - name: SonarQube Scan 
-      uses: SonarSource/sonarqube-scan-action@v5
-      with:
-        scanner-version: 'latest'
-      env:
-        SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
-        SONAR_HOST_URL: ${{ secrets.SONAR_HOST_URL }}
+      - uses: actions/checkout@v4
+
+      - name: Set up JDK 17
+        uses: actions/setup-java@v4
+        with:
+          java-version: '17'
+          distribution: 'temurin'
+          cache: maven
+
+      - name: Build Project
+        run: mvn package
+
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
+        with:
+          name: app-jar
+          path: target/*.jar
+
+      - uses: actions/checkout@v4
+        with:
+          fetch-depth: 0 # recommended for SonarQube
+
+      - name: SonarQube Scan
+        uses: SonarSource/sonarqube-scan-action@v5.0.0
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+
+      - name: SonarQube Quality Gate check
+        id: sonarqube-quality-gate-check
+        uses: sonarsource/sonarqube-quality-gate-action@master
+        with:
+          pollingTimeoutSec: 600
+        env:
+          SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
+          SONAR_HOST_URL: ${{ vars.SONAR_HOST_URL }}
+
   # -----------------------------
   # 3. Docker Build & Push
   # -----------------------------
   docker:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build_project_and_sonar_scan
     steps:
       - uses: actions/checkout@v4
 
@@ -102,22 +129,3 @@ jobs:
           docker stop sample-app || true
           docker rm sample-app || true
           docker run -d --name sample-app -p 8080:8080 $IMAGE_NAME:latest
-
-  # -----------------------------
-  # 5. Notifications (Slack example)
-  # -----------------------------
-  notify:
-    runs-on: ubuntu-latest
-    needs: [build, sonar, docker, deploy]
-    steps:
-      - name: Send Slack notification
-        if: always() # Send notification even if previous jobs fail
-        uses: slackapi/slack-github-action@v1.24.0
-        with:
-          channel-id: ${{ secrets.SLACK_CHANNEL_ID }}
-          slack-message: |
-            CI/CD Pipeline completed.
-            Status: ${{ job.status }}
-            Commit: ${{ github.sha }}
-            Branch: ${{ github.ref }}
-          slack-bot-token: ${{ secrets.SLACK_BOT_TOKEN }}
